--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,8 +4,7 @@
         "removeComments": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "traceResolution": true,
-    "baseUrl": "./modules"
+    "traceResolution": true
     },
     "files": [
         "./app.ts"
